[package]
name = "os"
version = "0.1.0"
authors = ["buhe <bugu1986@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
spin = "0.7.0"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
device_tree = { git = "https://github.com/rcore-os/device_tree-rs", rev = "2fa8411" }
k210-pac = { git = "https://github.com/buguOS/k210-pac" }
k210-hal = { git = "https://github.com/buguOS/k210-hal" }
k210-soc = { git = "https://github.com/buguOS/k210-soc" }
libm = "0.1"
infrared = "0.13.0"
nom = { version = "5", default-features = false, features = [] }
fs-demo = { path = "../fs-demo" }